Add connect menstagram-api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,9 @@ services:
     volumes:
       - .:/app
     command: python app.py
+    networks:
+      - menstagram
+
+networks:
+  menstagram:
+    external: true
