--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - 8001:80
     volumes:
       - .:/app
-    command: python app.py
+    command: pipenv run serve
     networks:
       - menstagram
 
