Add nginx & uWSGI

--- a/Pipfile
+++ b/Pipfile
@@ -12,11 +12,11 @@ numpy = "==1.15.4"
 pillow = "*"
 tensorflow = "==1.14.0"
 keras = "==2.2.4"
+uwsgi = "*"
 
 [requires]
 python_version = "3.7"
 
 [scripts]
-serve = "python app.py"
 train = "python ml/train_model.py"
 test = "python ml/test_model.py"
