--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,32 @@
 version: '3'
 
 services:
-  flask:
-    container_name: menstagram_flask
-    build: .
+  nginx:
+    container_name: menstagram_api_nginx
+    image: nginx
     ports:
       - 8001:80
     volumes:
-      - .:/app
-    command: pipenv run serve
+      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
+    environment:
+      TZ: "Asia/Tokyo"
+    depends_on:
+      - uwsgi
+    networks:
+      - menstagram
+
+  uwsgi:
+    container_name: menstagram_ai_uwsgi
+    build:
+      context: ./
+      dockerfile: ./docker/uwsgi/Dockerfile
+    ports:
+      - 3031:3031
+    command: uwsgi --ini /var/www/docker/uwsgi/uwsgi.ini
+    volumes:
+      - .:/var/www
+    environment:
+      TZ: "Asia/Tokyo"
     networks:
       - menstagram
 
