Modify docker-compose & Makefile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 
 services:
+  # Webサーバ
   nginx:
     container_name: menstagram_api_nginx
     image: nginx
@@ -9,12 +10,13 @@ services:
     volumes:
       - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
     environment:
-      TZ: "Asia/Tokyo"
+      TZ: 'Asia/Tokyo'
     depends_on:
       - uwsgi
     networks:
       - menstagram
 
+  # Flask + WSGIサーバ
   uwsgi:
     container_name: menstagram_ai_uwsgi
     build:
@@ -26,7 +28,7 @@ services:
     volumes:
       - .:/var/www
     environment:
-      TZ: "Asia/Tokyo"
+      TZ: 'Asia/Tokyo'
     networks:
       - menstagram
 
