--- a/docker/uwsgi/Dockerfile
+++ b/docker/uwsgi/Dockerfile
@@ -1,13 +1,14 @@
 FROM python:3.7-slim
 
-RUN mkdir /var/www
-WORKDIR /var/www
+RUN mkdir -p /var/www/app
 
 RUN apt update && apt install build-essential -y
-
 RUN pip install --upgrade pip
 RUN pip install pipenv
 
+WORKDIR /var/www
 COPY Pipfile ./
 COPY Pipfile.lock ./
 RUN pipenv install --dev --system
+
+WORKDIR /var/www/app
