--- a/docker/uwsgi/Dockerfile
+++ b/docker/uwsgi/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.7-slim
 
-RUN mkdir -p /var/www/app
+RUN mkdir -p /var/www/api
 
 RUN apt update && apt install build-essential -y
 RUN pip install --upgrade pip
@@ -11,4 +11,4 @@ COPY Pipfile ./
 COPY Pipfile.lock ./
 RUN pipenv install --dev --system
 
-WORKDIR /var/www/app
+WORKDIR /var/www/api
