Modify settings & Delete unnecessary codes

--- a/docker/uwsgi/Dockerfile
+++ b/docker/uwsgi/Dockerfile
@@ -9,6 +9,6 @@ RUN pip install pipenv
 WORKDIR /var/www
 COPY Pipfile ./
 COPY Pipfile.lock ./
-RUN pipenv install --dev --system
+RUN pipenv install --dev --system --verbose
 
 WORKDIR /var/www/api
