--- a/docker/uwsgi/uwsgi.ini
+++ b/docker/uwsgi/uwsgi.ini
@@ -3,6 +3,7 @@ wsgi-file = /var/www/api/server.py
 callable = app
 master = true
 processes = 1
+threads = 1
 socket = :3031
 chmod-socket = 666
 vacuum = true
