Modify download_learn_data.sh & README

--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ uwsgi = "*"
 python_version = "3.7"
 
 [scripts]
+download = "trainer/download_learn_data.sh"
 separate = "python trainer/separate_learn_data.py"
 train = "python trainer/train_model.py"
 test = "python trainer/test_model.py"
